cats/src/main/java/com/example/cats/Error/Exception/FactsUnknownError.java
package com.example.cats.Error.Exception;

public class FactsUnknownError extends RuntimeException{
    private final String errorCode;

    public FactsUnknownError(String errorCode) {
        this.errorCode = errorCode;
    }

    public String getErrorCode() {
        return errorCode;
    }
}
